<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
        android:id="@+id/comic_reader_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:contentDescription="@string/see_all" />

    <com.shicheeng.picacgmaterial3.widget.ModernCircularProgressIndicator
        android:id="@+id/comic_image_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:showingText="@string/loading_picture"
        app:showingTextColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/comic_image_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/retry"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>