<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorOnSecondary"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:orientation="vertical"
    android:padding="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/comment_bar_user_avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/comment"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_pic" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/comment_bar_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textAppearance="?textAppearanceHeadline6"
                app:autoSizeMaxTextSize="20dp"
                app:autoSizeMinTextSize="13sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/comment_bar_user_slogan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="?textAppearanceBody2"
                android:textColor="?colorOnSurfaceVariant" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_info"
                android:textAppearance="?textAppearanceBodySmall" />

            <TextView
                android:id="@+id/comment_bar_user_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_show"
                android:textAppearance="?textAppearanceHeadline6" />

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/comment_body_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:textAppearance="?textAppearanceBodyLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/comment_body_text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:text="@string/time_show"
            android:textAppearance="?textAppearanceBodySmall" />

        <TextView
            android:id="@+id/like_count_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:text="@string/like_count_comment"
            android:textAppearance="?textAppearanceBodySmall"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


</LinearLayout>