<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/comic_reader_view_pagers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:layoutDirection="rtl" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/comic_reader_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/comic_reader_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?colorSurface"
            app:navigationIcon="@drawable/ic_up_nav"
            app:navigationIconTint="?colorOnSurface" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/comic_reader_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?colorSurface"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.slider.Slider
                android:id="@+id/comic_reader_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:stepSize="1"
                app:labelBehavior="floating" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/comic_reader_bottom_btn"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/next"
                app:icon="@drawable/ic_next_chapter"
                app:iconTint="@color/white" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/comic_reader_bottom_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/num_show"
                android:textAppearance="?textAppearanceHeadline6"
                android:textColor="?colorOnSurface" />

            <TextView
                android:id="@+id/comic_reader_bottom_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/page_count"
                android:textAppearance="?textAppearanceBody2"
                android:textColor="?colorOnSurface" />

        </LinearLayout>


    </LinearLayout>

    <com.shicheeng.picacgmaterial3.widget.ModernCircularProgressIndicator
        android:id="@+id/comic_reader_showing_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:showingText="@string/parser_uri"
        app:showingTextColor="@color/white" />

    <com.shicheeng.picacgmaterial3.widget.ModernButton
        android:id="@+id/comic_reader_modern_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:buttonText="@string/retry" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>