<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/header_layout"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/header_image"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/header_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/header_image"
                    android:textAppearance="?textAppearanceHeadline5" />

                <TextView
                    android:id="@+id/header_title_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/header_name"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/header_image" />

                <TextView
                    android:id="@+id/header_title_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/header_title_level"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/header_image"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/header_title_name"
                    android:layout_toEndOf="@id/header_image"
                    android:orientation="horizontal">

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/header_level_indication"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="4"
                        android:indeterminate="true"
                        app:indicatorColor="?colorOnSecondary"
                        app:trackColor="?colorOnSurface" />

                    <TextView
                        android:id="@+id/exp_to_next_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp" />


                </LinearLayout>


            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/in_to_all_my_favorite_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/myf"
                android:textAppearance="?textAppearanceHeadline6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textAppearance="?textAppearanceBodySmall"
                android:textColor="?colorSecondary" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/me"
                android:src="@drawable/ic_nav_next"
                app:tint="?colorSecondary" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_favorite_recycler"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="42dp"
            android:scrollbars="horizontal" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_fav_indication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/my_favorite_retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/retry"
            android:visibility="gone" />


    </LinearLayout>


</androidx.core.widget.NestedScrollView>